--- a/style.css
+++ b/style.css
@@ -1,34 +1,84 @@
-body{
-    background-color: black;
-    overflow: scroll !important;
+body {
+   background-color: black;
+   overflow: scroll !important;
 }
 
+.typewriter h1 {
+   overflow: hidden; /* Ensures the content is not revealed until the animation */
+   border-right: 0.15em solid orange; /* The typwriter cursor */
+   white-space: nowrap; /* Keeps the content on a single line */
+   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+   letter-spacing: 0.15em; /* Adjust as needed */
+   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+   margin-top: 1rem;
+   font-size: 2rem;
+}
+
+/* The typing effect */
+@keyframes typing {
+   from {
+      width: 0;
+   }
+   to {
+      width: 100%;
+   }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+   from,
+   to {
+      border-color: transparent;
+   }
+   50% {
+      border-color: orange;
+   }
+}
 
 div.scroll {
-    margin:4px, 4px;
-    padding:4px;
-    background-color: green;
-    width: 500px;
-    height: 110px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    text-align:justify;
+   margin: 4px, 4px;
+   padding: 4px;
+   background-color: green;
+   width: 500px;
+   height: 110px;
+   overflow-x: hidden;
+   overflow-y: auto;
+   text-align: justify;
 }
-body, h1,h3{
-    color: azure;
-    text-align: center;
-    font-family:'Courier New', Courier, monospace;
+body,
+h1,
+h3 {
+   color: azure;
+   text-align: center;
+   font-family: "Courier New", Courier, monospace;
 }
 
 .center {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    }
- img{
-    border-radius: 50%;
-    width: 100px;
-  }
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+#main img {
+   border-radius: 50%;
+   width: 20%;
+   height: auto;
+}
 
+.info-section {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 3em;
+}
+
+@media screen and (max-width: 768px) {
+    .info-section {
+        width: 90%;
+        text-align: left;
+    }
+
+    #main img {
+        width: 40%;
+    }
+}
